syntax = "proto3";

service StoryService {
  rpc InitStory(InitStoryRequest) returns (StoryResponse) {}
  rpc DeleteStory(DeleteStoryRequest) returns (StoryResponse) {}
}

// Requests
message InitStoryRequest {
  string userID  = 1;
  string username = 2;
  string userEmail = 3;
  string title = 4;
  string content = 5;
  double rated = 6;
  string status = 7;
}

message DeleteStoryRequest {
  string userID  = 1;
  string title = 2;
}

// Responses
message Story {
  string storyID = 1;
  string userID = 2;
  string title = 3;
  string content = 4;
  double rated = 5;
  string status = 8;
  string createdOn = 10;
  string updatedOn = 11;
}

message StoryData {
  Story story = 1;
}

message StoryResponse {
  string status = 1;
  string message = 2;
  StoryData data = 3;
}
